--- a/react/package.json
+++ b/react/package.json
@@ -6,12 +6,17 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
+    "bootstrap": "^4.6.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
     "react": "^16.14.0",
+    "react-bootstrap": "^1.5.2",
     "react-dom": "^16.14.0",
-    "react-scripts": "4.0.3",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "^4.0.3",
     "react-test-renderer": "^17.0.1",
+    "reactstrap": "^8.9.0",
+    "validator": "^13.5.2",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
