--- a/spring/src/main/resources/application.properties
+++ b/spring/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+  
+spring.datasource.url=jdbc:mysql://localhost:3306/local_wms?useSSL=false
+spring.datasource.username=root
+spring.datasource.password=niraj
 
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
+
+spring.jpa.hibernate.ddl-auto = update
+
+server.port = 8081
