--- a/spring/src/main/resources/application.properties
+++ b/spring/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 
+# update url,username, password and then uncomment it.
+
+# make this change to spring.jpa.hibernate.ddl-auto=none This is to tell Hibernate won’t recreate the table in the next run of the application.
+#  spring.jpa.hibernate.ddl-auto=create
+# spring.datasource.url=jdbc:mysql://localhost:3306/codejavadb
+# spring.datasource.username=root
+# spring.datasource.password=password
+# spring.jpa.properties.hibernate.format_sql=true
