--- a/spring/src/main/resources/application.properties
+++ b/spring/src/main/resources/application.properties
@@ -1,7 +1,7 @@
   
 spring.datasource.url=jdbc:mysql://localhost:3306/local_wms?useSSL=false
 spring.datasource.username=root
-spring.datasource.password=niraj
+spring.datasource.password=Mast chess1
 
 # update url,username, password and then uncomment it.
 
@@ -16,4 +16,4 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 
 spring.jpa.hibernate.ddl-auto = update
 
-server.port = 8081
+server.port = 0
