--- a/spring/src/main/resources/application.properties
+++ b/spring/src/main/resources/application.properties
@@ -1,7 +1,7 @@
   
 spring.datasource.url=jdbc:mysql://localhost:3306/local_wms?useSSL=false
 spring.datasource.username=root
-spring.datasource.password=niraj
+spring.datasource.password=Mast chess1
 
 # update url,username, password and then uncomment it.
 
